<resources>
    <string name="app_name">Sahabat Lansia</string>
    <string name="logo">Logo</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="app_version_1_0">App Version 1.0</string>
    <string name="onboarding_image">OnBoarding Image</string>
    <string name="have_account">Saya sudah memiliki akun.<font color="#088579"><b> Login</b></font></string>
    <string name="no_account">Saya belum memiliki akun.<font color="#088579"><b> Register</b></font></string>
    <string name="email">Email</string>
    <string name="email_hint">Enter your email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_hint">Enter your password</string>
    <string name="confirm_password_hint">Enter confirm password</string>
    <string name="article">Article</string>
    <string name="caregiver_finder">Caregiver Finder</string>
    <string name="notification">Notifikasi</string>

    <string-array name="data_nama">
        <item>Santi</item>
        <item>Joko</item>
        <item>Putri</item>
        <item>Hans</item>
        <item>Fitri</item>
    </string-array>

    <string-array name="data_asal">
        <item>Kota Malang</item>
        <item>Kota Surabaya</item>
        <item>Kabupaten Ngawi</item>
        <item>Kota Semarang</item>
        <item>Kota Jakarta</item>
    </string-array>

    <integer-array name="data_photo">
        <item>@drawable/caregiver_card_photo</item>
        <item>@drawable/caregiver_card_photo</item>
        <item>@drawable/caregiver_card_photo</item>
        <item>@drawable/caregiver_card_photo</item>
        <item>@drawable/caregiver_card_photo</item>
    </integer-array>

    <string-array name="data_waktu">
        <item>16 Juni 2023</item>
        <item>09 Juni 2023</item>
        <item>01 Juni 2023</item>
        <item>20 Mei 2023</item>
        <item>15 Mei 2023</item>
    </string-array>
    <string name="title_activity_homepage">HomepageActivity</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_setting">Setting</string>
    <string name="title_profile">Profile</string>
    <string name="app_motto">Find your caregiver</string>
    <string name="profile">Profile</string>
    <string name="simpan">Simpan</string>
    <string name="history">History</string>
    <string name="setting">Setting</string>
    <string name="username">Username</string>
    <string name="username_hint">Enter your username</string>
    <string name="search">Search</string>
    <string name="article_hint">Enter Article Title</string>
    <string name="searchButton">Get Article Topic Recommendation</string>
    <string name="diabetes">Diabetes</string>
    <string name="tidak">Tidak</string>
    <string name="iya">Iya</string>
    <string name="hipertensi">Hipertensi</string>
    <string name="reumatik">Reumatik</string>
    <string name="penyakit_jantung">Penyakit Jantung</string>
    <string name="asma">Asma</string>
    <string name="stroke">Stroke</string>
    <string name="penyakit_lain">Penyakit Lain</string>
    <string name="tidak_perlu">Tidak perlu</string>
    <string name="cukup_perlu">Cukup Perlu</string>
    <string name="perlu">Perlu</string>
    <string name="sangat_perlu">Sangat perlu</string>
    <string name="membantu_pergerakan_dan_aktivitas_fisik">Membantu pergerakan dan aktivitas fisik</string>
    <string name="membantu_konsumsi_obat_dan_makanan">Membantu konsumsi obat dan makanan</string>
    <string name="mendampingi_dan_menjaga">Mendampingi dan menjaga</string>
    <string name="memasangkan_alat_medis_khusus">Memasangkan alat medis khusus</string>
    <string name="memeriksakan_rutin_ke_dokter">Memeriksakan rutin ke dokter</string>
    <string name="share">Share</string>
    <string name="like">Like</string>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="action_settings">Settings</string>

    <string name="task_details">Task Details</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_new_task_title">Add New Task</string>
    <string name="edit_task_title">Edit Task</string>
    <string name="add_task_new_menu_button">Save</string>
    <string name="no_reminders">Saat ini belum ada pengingat, tambahkan pengingat pada tombol di bawah</string>
    <string name="rekomendasi_caregiver">Rekomendasi Caregiver</string>
    <string name="onboardingactivity">OnboardingActivity</string>
    <string name="add_data_lansia">Add Data Lansia</string>
    <string name="nama_pasien">Nama Pasien</string>
    <string name="tinggi_in_cm">Tinggi (In cm)</string>
    <string name="weight_in_kilogram">Weight (In Kilogram)</string>
    <string name="name_caregiver">Arfan Septiana</string>
    <string name="city_caregiver">Kabupaten Ngawi</string>

</resources>