<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    tools:context=".ui.home.HomeFragment" >

    <!-- Shape with rounded corners -->
    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:background="@drawable/rounded_corner_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Logo -->
        <ImageView
            android:id="@+id/logo"
            android:layout_width="124dp"
            android:layout_height="124dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo_photo" />

        <!-- Title of the App -->
        <TextView
            android:id="@+id/appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/app_name"
            android:textColor="#092C52"
            android:textSize="18sp" />

        <!-- First Button -->
        <ImageButton
            android:id="@+id/caregiverButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@id/appTitle"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:background="@color/teal_700"
            android:contentDescription="@string/caregiver_finder"
            android:src="@drawable/caregiver_photo" />

        <!-- Second Button -->
        <ImageButton
            android:id="@+id/articleButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@id/appTitle"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@id/caregiverButton"
            android:background="@color/teal_700"
            android:contentDescription="@string/article"
            android:src="@drawable/article_photo" />

        <!-- Third Button -->
        <ImageButton
            android:id="@+id/notificationButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@id/appTitle"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@id/articleButton"
            android:background="@color/teal_700"
            android:contentDescription="@string/notification"
            android:src="@drawable/notifikasi_photo" />

        <!-- App Version -->
        <TextView
            android:id="@+id/appMotto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="400dp"
            android:layout_marginLeft="150dp"
            android:text="@string/app_motto"
            android:textColor="@color/blue" />

        <TextView
            android:id="@+id/appVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_version_1_0"
            android:textColor="@color/blue"
            android:layout_marginTop="430dp"
            android:layout_marginLeft="160dp"/>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>