<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#088579">

    <!-- Shape with rounded corners -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:background="@drawable/rounded_corner_background">

        <!-- Logo -->
        <ImageView
            android:id="@+id/logo"
            android:layout_width="124dp"
            android:layout_height="124dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:src="@drawable/logo_photo"
            android:contentDescription="@string/logo" />

        <!-- Title of the App -->
        <TextView
            android:id="@+id/appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/app_title"
            android:textColor="#092C52"
            android:textSize="18sp" />

        <!-- App Description -->
        <TextView
            android:id="@+id/appDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/appTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/app_description"
            android:textColor="#092C52"
            android:textSize="14sp" />

        <!-- Login Button -->
        <Button
            android:id="@+id/loginButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/appDescription"
            android:layout_centerHorizontal="true"
            android:text="@string/login" />

        <!-- Register Button -->
        <Button
            android:id="@+id/registerButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/register" />

        <!-- Version of the App -->
        <TextView
            android:id="@+id/appVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/registerButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/app_version_1_0"
            android:textColor="#092C52"
            android:textSize="14sp" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/onboardingImage"
        android:layout_width="match_parent"
        android:layout_height="309dp"
        android:contentDescription="@string/onboarding_image"
        android:scaleType="centerCrop"
        android:src="@drawable/onboarding_photo" />
</RelativeLayout>
