<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ArticleActivity">

    <LinearLayout
        android:id="@+id/searchLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/search_bar_background"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:id="@+id/searchIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_search"
            android:contentDescription="@string/search" />

        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/article_hint"
            android:background="@android:color/transparent"
            android:paddingStart="8dp" />

    </LinearLayout>

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/searchLayout"
        android:layout_marginTop="16dp"
        android:layout_centerInParent="true"
        android:text="@string/searchButton" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/searchButton"
        android:layout_marginTop="16dp" />

</RelativeLayout>
